# hydrophonic-detection

./: .gitignore  LICENSE  README.md  environment.yml  kystdatahuset_api_test.py  package-lock.json
Recources/Blokkdiagram/: Broadband_blokk.drawio  DEMON_blokk.drawio  FIFO_blokk.drawio  Narrowband_blokk.drawio
Sound_data/Demon_analysis/: DemonAnalysis3.py  Detection2.py
Sound_data/Demon_matlab/: BroadBandAnalysis.m  DemonAnalysis3.m  Detection.m  NarrowBandAnalysis2.m
Sound_data/Processing_scripts/: DEMON.ipynb  Processer_main.py  Spectrogram_plotter.ipynb  functions.py  spec_tst.py  spectrogram_test.ipynb
Sound_data/spectrogrammer-main/: README.md  run.py  setup.py
app/configs/: README.md  ais_fetcher_config.json  minio_config.json  mongodb_config.json  recording_parameters.json
app/services/: websocket_server.py
code_on_raspberry_pi/: kafka_orchestrator.py  requirements.txt
code_on_raspberry_pi/audio_broker/: ais_api_producer.py  ais_consumer.py  ais_fetcher_config.json  ais_producer.py  aiscatcher_config.json  audio_consumer.py  audio_event_recorder.py  audio_producer.py  broker_info.json  broker_info_ais.json  config_producer.py  detection_consumer.py  docker-compose.yml  (+12 more)
configs/: recording_parameters.json
data/Proc-opt/: Broadband_opt  Broadband_opt.cpp  Broadband_opt.ipynb  Broadband_opt_script.py  CMakeLists.txt  Demon_opt.ipynb  Demon_opt_script.py  README.md  functions.cpp  functions.h
data_processing_api/: main.py
ps-filer/: 20250202-0007.psdata  20250202-0008.psdata  20250202.psdata
tests/: qgis_test.py
various_tests/: api_test.py
(+318 files in other folders)
